apps/next/web/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/harrytang/web:main-f10a263-1764693741 # {"$imagepolicy": "harrytang-staging:web"}
