apps/next/web/patch.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/harrytang/web:main-c00af2c-1788377952 # {"$imagepolicy": "harrytang-staging:web"}
