apps/next/web/patch.http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-http
spec:
  hostnames:
    - next.harrytang.xyz
