apps/next/web/patch.https-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-https
spec:
  hostnames:
    - next.harrytang.xyz
